<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_language"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_baseline_star"
            android:title="@string/menu_favorite" />
        <item
            android:id="@+id/nav_testing"
            android:icon="@drawable/ic_dumbell"
            android:title="@string/menu_test" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_outline_info"
            android:title="@string/menu_about" />
    </group>
</menu>