<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llc_answer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llc_sprint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="-32dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_word_persian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/farsi_kacst_one"
            android:maxLines="2"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="normal"
            app:fontFamily="@font/farsi_kacst_one"
            tools:text="دمبل" />

        <View
            android:id="@+id/v_divider"
            android:layout_width="match_parent"
            android:layout_height="0.9dp"
            android:layout_marginTop="16dp"
            android:background="@color/gray_light" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_select_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textColor="@color/gray"
            android:textStyle="normal"
            tools:text="@string/select_correct_answer" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llc_sprint_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_incorrect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/ripple_incorrect_button"
            android:text="@string/incorrect_word"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_correct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/ripple_correct_button"
            android:text="@string/correct_word"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>